--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@material-ui/core": "^3.9.3",
+    "bignumber.js": "^8.1.1",
     "bitgo": "^5.0.4",
     "body-parser": "latest",
     "classnames": "^2.2.6",
